--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,8 +25,8 @@
 
 // Font.
 $font: (
-  primary: ("Lato","Helvetica Neue",Helvetica,sans-serif),
-  secondary: ("Noto Serif",Georgia,serif)
+  primary: ("Pretendard", Helvetica,sans-serif),
+  secondary: ("Pretendard", serif)
 );
 
 // Palette.
