--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -14,6 +14,11 @@ body {
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
+  -ms-overflow-style: none;  
+  
+  ::-webkit-scrollbar {
+    display: none;
+  }
 
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
