--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,17 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #111111;
+
+  --black: #111111;
+  --white: #ffffff;
+
+  --gray-700: #444444;
+  --gray-500: #666666;
+  --gray-300: #898989;
+  --gray-100: #e0e0e0;
+
+  --primary-500: #ed7b58;
 }
 
 @media (prefers-color-scheme: dark) {
