style: 컬러 모드 라이트모드로 막아놓기

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,11 +19,9 @@
   --primary-100: #fcd8ce;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.dark {
+  --background: var(--black);
+  --foreground: var(--white);
 }
 
 body {
